# psiexperiment

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  MIGRATION.md  PXI systems.md  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml  test.yml
Scripts/: activate.bat  conda.bat  deactivate.bat
configuration/: pika.enaml
demo/: logging_levels.py
demo/app/: io_manifest.enaml  launch.py  simple_experiment.enaml
demo/notebooks/: plotting a token primitive.ipynb  simple_manifest.enaml  stimulus generation.ipynb  tone calibration debugging.ipynb
docs/: Makefile  conf.py  creating_experiment.md  environment.yml  index.rst  installing.md  restartability.md  substitutions.sub  threading.md
docs/source/: architecture.rst  conf.py  context.rst  creating_experiment.md  creating_experiment.rst  data_processing.rst  development.rst  example_experiment.rst  index.rst  input.md  install_epl_cfts.rst  installing.md  installing.rst  interleaved_ABR.rst  io_manifest.rst  paradigm_overview.rst  plugin_reference.rst  screenshots.rst  waveforms.rst
examples/: logging_levels.py
examples/app/: launch.py  simple_experiment.enaml  startstop_controller.enaml
examples/hardware/: acquire_chirp_waveform.py
examples/notebooks/: Calibration tutorial.ipynb  DPOAE analysis from raw data.ipynb  In-ear click calibration.ipynb  Looking at RefTarScript.ipynb  Test free-field speaker calibration.ipynb  Test free-field speaker level.ipynb  Tone and chirp calibration.ipynb  Two starship calibration.ipynb  calibration details.ipynb  chirp calibration debugging.ipynb  getting response to simple waveform.ipynb  load and plot speaker calibration.ipynb  stimulus generation.ipynb  tone calibration debugging.ipynb  using queues.ipynb
examples/plots/: test_plots.enaml
examples/widgets/: electrode_coordinate_selector.enaml  friendly_cartesian_product_selector.enaml  test_dataframe_view.enaml  test_freq_level_view.enaml  test_list_view.enaml
experiments/: __init__.py
experiments/appetitive/: __main__.py  manifest.enaml
experiments/appetitive_tone_detection/: __main__.py  manifest.enaml
psi/: LICENSE.txt  __init__.py  __main__.py  _version.py  config.py  util.py
psi/application/: __init__.py  __main__.py  api.py  base_launcher.py  base_launcher_view.enaml  cfts_launcher.py  cfts_launcher_view.enaml  experiment_description.py  gui_launcher.py  gui_launcher_view.enaml  psi_launcher.py  workbench.py
psi/context/: api.py  choice.py  context_group.py  context_item.py  context_item_manifest.enaml  context_item_view.enaml  context_view.enaml  expression.py  manifest.enaml  plugin.py  result.py  selector.py  selector_manifest.enaml  selector_view.enaml  symbol.py
psi/controller/: api.py  appetitive_manifest.enaml  appetitive_plugin.py  base_manifest.enaml  base_plugin.py  calibration.py  calibration_dialog.enaml  channel.py  channel_manifest.enaml  controller_commands.py  device.py  device_manifest.enaml  dispatcher.py  engine.py  engine_manifest.enaml  experiment_action.py  input.py  input_manifest.enaml  input_primitives.enaml  io_manager.py  manifest.enaml  output.py  output_commands.py  output_manifest.enaml  output_view.enaml  passive_manifest.enaml  plugin.py  queue.py  test.py  token_context.py  util.py  wrapup_messagebox.enaml
psi/core/: api.py  exceptions.py  experiment_action.py  status_item.py
psi/data/: api.py  manifest.enaml  plot_groups.py  plot_ranges.py  plot_util.py  plot_view.enaml  plots.py  plots_manifest.enaml  plugin.py  qt_completer.py  sink.enaml  sink.py  trial_data.py
psi/experiment/: '  api.py  dock_area_styles.enaml  error_style.enaml  experiment_commands.py  manifest.enaml  manifests.py  metadata_item.py  paradigm_description.py  plugin.py  preferences.py  status_item.py  util.py  view.enaml  workbench.py  workbench_window.enaml  workspace.py
psi/templates/: config.txt  gonogo_behavior.enaml  noise_exposure.enaml
psi/token/: __init__.py  api.py  bandlimited_noise_manifest.enaml  base_manifest.py  block.py  manifest.enaml  plugin.py  primitives.enaml  token.enaml  token_manifest.enaml  token_manifest.py  token_plugin.py  tone_manifest.enaml  util.py
psiexperiment/: __init__.py  __main__.py  choice.py  config.py  controller.py  experiment_view.enaml  expression.py  parameter.py  parameter_view.enaml  selector.py  selector_view.enaml
psiexperiment/context/: choice.py  context_group.py  context_item.py  context_view.enaml  manifest.enaml  plugin.py  selector.py  selector_view.enaml
psiexperiment/controller/: appetitive_manifest.enaml  appetitive_plugin.py  base_manifest.enaml  base_plugin.py
psiexperiment/core/: utils.py
psiexperiment/data/: manifest.enaml  plugin.py
psiexperiment/experiment/: manifest.enaml  plugin.py  preferences.py  workspace.py
scripts/: make_icon.py  test.py  validate_abr.py  validate_dpoae.py
scripts/examples/: experiment_launcher.bat  launch_video.bat  robocopy_backup.bat
tests/: conftest.py  helpers.enaml  script_calibration.py  test_api_imports.py  test_buffers.py  test_cfts.py  test_choice.py  test_config.py  test_context.py  test_context_items.py  test_controller.py  test_controller_calibration.py  test_controller_commands.py  test_controller_plugin_io.py  test_core.py  test_core_error.py  test_core_error_manifest.enaml  test_core_manifest.enaml  test_data.py  test_dispatcher.py  test_experiment_action.py  test_experiment_plugin.py  test_experiment_preferences.py  test_expression.py  test_import_side_effects.py  test_input.py  test_input_blocks.py  test_io_manager.py  test_null_engine.py  test_output.py  test_output_queue.py  test_paradigm_description.py  test_parameter.py  test_queue.py  test_selector.py  test_signal_buffer.py  test_sinks.py  test_token.py  test_token_block.py  test_token_context.py  (+5 more)
tests/application/: test_base.py  test_logging.py  test_workbench.py
tests/calibration/: default.json  test_calibration.py  test_calibration_plugin.py  test_merge_results.py  test_tone_calibration.py
tests/data/: conftest.py  (+14 more)
tools/: check_enaml_layering.py
(+319 files in other folders)
