[project]
name = "psiexperiment"
description = "Framework for running trial-based experiments"
readme = "readme.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Brad Buran", email="bburan@alum.mit.edu"},
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Buran Consulting, LLC", email="info@bradburan.com"}
]
maintainers = [
    {name = "Brad Buran", email="bburan@alum.mit.edu"},
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Buran Consulting, LLC", email="info@bradburan.com"}
]
dependencies = [
    "psidata >= 0.1.7",
    "psiaudio >= 0.2.4",
    "enaml >=0.13.0",
    "numpy",
    "palettable",
    "pyqtgraph >=0.11.0",
    "scipy",
    "pandas",
    "pyyaml",
    "pywin32; os_name=='nt'",
    "websockets",
]
dynamic = ["version"]

[project.optional-dependencies]
ni = ["pydaqmx"]
tdt = ["tdtpy >=0.10.2"]
docs = ["sphinx", "sphinx_rtd_theme", "pygments-enaml"]
test = ["pytest", "pytest-console-scripts", "matplotlib"] # Matplotlib is used in some of the validation scripts.
zarr = ["zarr"]
dev = ["coloredlogs"]

[project.scripts]
psi = "psi.application.psi_launcher:main"
psi-config = "psi.application:config"

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "psi/version.py"
