[project]
name = "psiexperiment"
description = "Framework for running trial-based experiments"
readme = "readme.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Brad Buran", email="bburan@alum.mit.edu"},
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Buran Consulting, LLC", email="info@bradburan.com"}
]
maintainers = [
    {name = "Brad Buran", email="bburan@alum.mit.edu"},
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Buran Consulting, LLC", email="info@bradburan.com"}
]
dependencies = [
    "psidata >= 0.1.12",
    "psiaudio >= 0.4.4",
    "enaml >=0.19.0",
    "numpy",
    "palettable",
    "pyqtgraph >=0.14.0",
    "scipy",
    "pandas",
    "pyyaml",
    "pywin32; os_name=='nt'",
    "websockets",
]
dynamic = ["version"]

[project.optional-dependencies]
ni = ["pydaqmx"]
tdt = ["tdtpy >=0.10.4"]
soundcard = ["sounddevice", "rtmixer"]
docs = ["sphinx", "sphinx_rtd_theme", "pygments-enaml"]
test = ["pytest", "pytest-console-scripts", "pytest-cov", "matplotlib"] # Matplotlib is used in some of the validation scripts.
zarr = ["zarr"]
dev = ["coloredlogs"]

[project.scripts]
psi = "psi.application.psi_launcher:main"
psi-config = "psi.application:config"

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "psi/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: test is slow and may be excluded from a fast run",
]
filterwarnings = [
    "ignore::DeprecationWarning:enaml.*",
]

[tool.coverage.run]
source = ["psi"]
omit = [
    "psi/version.py",
    "psi/_version.py",
    "*/__enamlcache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
