[project]
name = "psiexperiment"
description = "Framework for running trial-based experiments"
readme = "readme.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Brad Buran", email="bburan@alum.mit.edu"},
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Buran Consulting, LLC", email="info@bradburan.com"}
]
maintainers = [
    {name = "Brad Buran", email="bburan@alum.mit.edu"},
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Buran Consulting, LLC", email="info@bradburan.com"}
]
dependencies = [
    "psidata >= 0.1.12",
    "psiaudio >= 0.4.4",
    "enaml >=0.19.0",
    "numpy",
    "palettable",
    "pyqtgraph >=0.14.0",
    "scipy",
    "pandas",
    "pyyaml",
    "pywin32; os_name=='nt'",
    "websockets",
]
dynamic = ["version"]

[project.optional-dependencies]
ni = ["pydaqmx"]
tdt = ["tdtpy >=0.10.4"]
soundcard = ["sounddevice", "rtmixer"]
docs = ["sphinx", "sphinx_rtd_theme", "pygments-enaml"]
test = ["pytest", "pytest-console-scripts", "pytest-cov", "matplotlib"] # Matplotlib is used in some of the validation scripts.
lint = ["ruff"]
zarr = ["zarr"]
dev = ["coloredlogs"]

[project.scripts]
psi = "psi.application.psi_launcher:main"
psi-config = "psi.application:config"

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "psi/version.py"

[tool.ruff]
# .enaml files are not Python and cannot be parsed by ruff. _version.py is a
# generated legacy versioneer file.
extend-exclude = ["psi/templates", "docs", "psi/_version.py"]

[tool.ruff.lint]
# F: pyflakes (undefined names, unused imports — would have caught several
#    latent NameErrors in error paths), E722: no bare except,
# B: bugbear (mutable defaults, f-string gotchas, etc.)
select = ["F", "E722", "B"]
ignore = [
    # zip(strict=...) — flipping existing zips to strict without auditing
    # each call site risks introducing new crashes where silent truncation
    # was tolerated. Revisit deliberately in a later cleanup phase.
    "B905",
]

[tool.ruff.lint.per-file-ignores]
# Wildcard re-exports are the established public API pattern for psi.
"psi/**/api.py" = ["F401", "F403"]
"psi/**/__init__.py" = ["F401"]
# Qt requires default arguments like parent=QModelIndex() to match the C++
# method signatures being overridden.
"psi/core/enaml/editable_table_widget.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: test is slow and may be excluded from a fast run",
]
filterwarnings = [
    "ignore::DeprecationWarning:enaml.*",
]

[tool.coverage.run]
source = ["psi"]
omit = [
    "psi/version.py",
    "psi/_version.py",
    "*/__enamlcache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
